-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.0, 6.9.1, 6.9.2, 6.9.3, 6.10.0 RC
-
None
-
-
8ac5a6c77 (dev), 3e9a3cfe3 (6.10), a6f8ab17d (tqtc/lts-6.8)
Hi
LoD not works correctly if the instance table update self data and camera is not moving.
It looks as the instancingLodMin and instancingLodMax is not initialized correctly after refreshing.
I attach modified example that reproduce this bug, I just replace number animation from camera to wasd controller and add Timer to change data in instance table every secund. This is a really hard issue for gaming, pease ix it.
As a temp solution, we use now multiple tables instancing for every LoDs, and refresh data when object is moved. it works, but not fast. I think default Qt LoD for instances will be better.
Short video with bug:
Screencast From 2025-09-30 10-35-06.mp4![]()
you can download example here : Lod instances-dirty bug.zip![]()
| For Gerrit Dashboard: QTBUG-140715 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 682270,4 | Instancing: Handle lod when buffer size changes | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 683224,2 | Instancing: Handle lod when buffer size changes | 6.10 | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 683355,2 | Instancing: Handle lod when buffer size changes | tqtc/lts-6.8 | qt/tqtc-qtquick3d | Status: MERGED | +2 | 0 |