Instancing: Handle lod when buffer size changes

Currently we only update instance lod data when the camera position
changes. This causes inconsistency when the instance data buffer is
modifed, e.g. when the instance count is changed while the camera
remains static. This patch adds an additional condition to updating lod
to handle that case.

Fixes: QTBUG-140715
Pick-to: 6.10 6.8
Change-Id: Ibc7b61d0135ba8d89eecefc8b6e413aba0ea25ea
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>